# Retro-VM-

./: Cargo.toml  LICENSE  README.md  requirements.txt
assets/: kali_vm.qcow2  module.txt
src/: main.rs
src/models/: ssid_dataset.csv  ssid_model.pkl  threat_dataset.csv  threat_model.pkl  threat_vectorizer.pkl
src/modes/: chatbot.rs  chess_GAME.rs  floppy_disk.rs  ghost.rs  ghost_an.rs  hacker.rs  math_question.rs  mod.rs  normal.rs  normal_fixed.rs  notepad.rs  train_model.py
src/modes/hackersmod/: ngrok.rs  server.rs  sitegen.rs  tui.rs  webhook.rs
src/scripts/: predict_extension.py  predict_ssid.py
