[package]
name = "retro_vm"
version = "0.1.0"
edition = "2024"
include = [
    "src/modes/hackersmod/*",
    "src/modes/hacker.rs",
    "src/modes/chatbot.rs",
    "src/modes/normal.rs",
]

[dependencies]
anyhow = "1.0.98"
bevy = "0.16.1"
chrono = "0.4.41"
eframe = "0.32.0"
egui = "0.32.0"
image = "0.25.6"
ordered-float = "5.0.0"
pixels = "0.15.0"
rfd = "0.15.3"
whoami = "1.6.0"
winit = "0.29.15"
winit_input_helper = "0.16.0"
macroquad = "0.4.14"
pollster = "0.4.0"
futures = "0.3.31"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
indicatif = "0.18.0"
rand = "0.9.1"
rodio = "0.20.1"
once_cell = "1.19"
reqwest = { version = "0.12.22", features = ["blocking", "json", "rustls-tls"] }

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
native-dialog = "0.9.0"
opener = "0.8.2"
csv = "1.3.1"
warp = "0.3.7"
tokio = { version = "1.46.1", features = ["full"] }
serde_urlencoded = "0.7.1"
ctrlc = "3.4.7"
openssl = { version = "0.10.73", features = [] }